build: add `pre-commit` to dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ langgraph = "^0.2.60"
 langsmith = "^0.2.7"
 langchain-groq = "^0.2.2"
 langgraph-cli = {extras = ["inmem"], version = "^0.1.65"}
+pre-commit = "^4.0.1"
 
 
 [build-system]
