--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.13"
 python-dotenv = "^1.0.1"
 langgraph = "^0.2.60"
 langsmith = "^0.2.7"
@@ -17,6 +17,11 @@ pre-commit = "^4.0.1"
 psycopg2-binary = "^2.9.10"
 langchain-core = "^0.3.29"
 langchain = "^0.3.14"
+chromadb = "^0.6.2"
+langchain-community = "^0.3.14"
+sentence-transformers = "^3.3.1"
+unstructured = {extras = ["md", "pdf"], version = "^0.16.12"}
+langchain-huggingface = "^0.1.2"
 
 
 [build-system]
